# HomeIQ

./: .cursorignore  .cursorrules  .dockerignore  .env.buildkit  .env.example  .git_commit_msg.txt  .gitattributes  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  .rebuild_state_phase1.json  AGENTS.md  AI_AUTOMATION_SERVICE_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_DEVICE_DATABASE.md  DEPLOYMENT_STATUS.md  DEVICE_DISPLAY_RESEARCH_SUMMARY.md  DOCUMENTATION_AUDIT_REPORT.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  INTEGRATION_TEST_REVIEW_AND_DEPLOYMENT.md  MCP_IMPLEMENTATION_SUMMARY.md  PATTERN_SYNERGY_CLEANUP_PLAN.md  PHASE_3_UPGRADE_PLAN.md  QUICK_FIX_IMPLEMENTED.md  README.md  REBUILD_STATUS.md  SECURITY.md  TECH_STACK.md  analysis_results.txt  analyze_pattern_synergy_data.py  assistant_message.txt  automation_from_ha.json  check_weather_data.py  cleanup_dry_run.txt  cleanup_patterns_synergies.py  conftest.py  conversation-analysis.json  (+64 more)
domains/automation-core/automation-linter/: Dockerfile  pyproject.toml  requirements.txt
domains/automation-core/automation-trace-service/: Dockerfile  pyproject.toml  requirements.txt
domains/automation-core/ha-ai-agent-service/: Dockerfile  README.md  REVIEW_AND_IMPROVEMENTS.md  YAML_REVIEW_SUMMARY.md  check_conversation.py  get_prompt_by_debug_id.py  pyproject.toml  query_db.py  requirements.txt  rollback_pytest_asyncio_20260205_141928.sh  rollback_pytest_asyncio_20260205_143720.sh  rollback_tenacity_20260205_141934.sh  temp_automation_fixed.yaml  temp_automation_review.yaml  test_context.py
domains/ml-engine/ai-core-service/: Dockerfile  README.md  REVIEW_AND_FIXES.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  rollback_pytest_asyncio_20260205_143730.sh  rollback_pytest_asyncio_20260205_143928.sh
domains/ml-engine/openvino-service/: Dockerfile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  rollback_pytest_asyncio_20260205_141852.sh  rollback_pytest_asyncio_20260205_143719.sh  rollback_tenacity_20260205_141900.sh
libs/homeiq-data/: README.md  pyproject.toml
libs/homeiq-data/templates/: alembic_env.py
libs/homeiq-data/tests/: test_base_settings.py  test_influxdb_manager.py  test_init.py
libs/homeiq-ha/: README.md  pyproject.toml
libs/homeiq-ha/tests/: test_init.py
libs/homeiq-memory/: README.md  alembic.ini  pyproject.toml
libs/homeiq-observability/: README.md  pyproject.toml
libs/homeiq-patterns/: README.md  pyproject.toml
libs/homeiq-resilience/: README.md  pyproject.toml
services/ai-automation-service-new/: .gitignore  CORRECTED_YAML_EXAMPLE.yaml  Dockerfile  ENTITY_VALIDATION_FIX_SUMMARY.md  IMPLEMENTATION_STATUS.md  README.md  REQUIREMENTS_ENTITY_VALIDATION_FIX.md  REVIEW_AND_IMPROVEMENTS.md  STORY_39_10_FOUNDATION.md  STORY_39_10_MIGRATION_GUIDE.md  TEST_EXECUTION_SUMMARY.md  analyze_review.py  coverage.json  find_bugs.py  pyproject.toml  pytest.ini  requirements.txt  review-results.json
services/nlp-fine-tuning/: README.md  REVIEW_AND_FIXES.md  pyproject.toml  requirements.txt
services/rule-recommendation-ml/: Dockerfile  REVIEW_AND_FIXES.md  pyproject.toml  requirements.txt
shared/patterns/: README.md  __init__.py  post_action_verifier.py  pyproject.toml  rag_context_registry.py  rag_context_service.py  unified_validation_router.py
simulation/: Dockerfile.simulation  FOLDER_STRUCTURE.md  README.md  cli.py  docker-compose.simulation.yml  execute_training.py  pyproject.toml  requirements.txt
simulation/automation-linter/: README.md
simulation/scripts/: run_simulation.sh
simulation/simulation/: retraining_results.json
simulation/simulation_results/: simulation_report_20251203_023048.csv  simulation_report_20251203_023048.html  simulation_report_20251203_023048.json  simulation_report_20251203_023103.csv  simulation_report_20251203_023103.html  simulation_report_20251203_023103.json  simulation_report_20251203_023120.csv  simulation_report_20251203_023120.html  simulation_report_20251203_023120.json  simulation_report_20251203_023128.csv  simulation_report_20251203_023128.html  simulation_report_20251203_023128.json  simulation_report_20251203_023239.csv  simulation_report_20251203_023239.html  simulation_report_20251203_023239.json  simulation_report_20251203_023349.csv  simulation_report_20251203_023349.html  simulation_report_20251203_023349.json  simulation_report_20251203_023411.csv  simulation_report_20251203_023411.html  simulation_report_20251203_023411.json  simulation_report_20251203_023643.csv  simulation_report_20251203_023643.html  simulation_report_20251203_023643.json  simulation_report_20251203_031350.csv  simulation_report_20251203_031350.html  simulation_report_20251203_031350.json  simulation_report_20251203_051003.csv  simulation_report_20251203_051003.html  simulation_report_20251203_051003.json  simulation_report_20251203_051028.csv  simulation_report_20251203_051028.html  simulation_report_20251203_051028.json  simulation_report_20251203_051037.html  simulation_report_20251203_051037.json  simulation_report_20251203_051344.csv  simulation_report_20251203_051344.html  simulation_report_20251203_051344.json  simulation_report_20251203_051936.csv  simulation_report_20251203_051936.html  (+28 more)
simulation/simulation_results_comprehensive/: simulation_report_20251203_145514.csv  simulation_report_20251203_145514.html  simulation_report_20251203_145514.json
simulation/simulation_results_fresh/: simulation_report_20251203_153217.csv  simulation_report_20251203_153217.html  simulation_report_20251203_153217.json
simulation/simulation_results_gnn/: simulation_report_20251203_150111.csv  simulation_report_20251203_150111.html  simulation_report_20251203_150111.json
simulation/src/: __init__.py
simulation/tests/: __init__.py  test_collector.py  test_data_generation_manager.py  test_engine.py  test_exporters.py  test_ground_truth_generator.py  test_home_generator.py  test_lineage_tracker.py  test_mocks.py  test_model_evaluation.py  test_model_training.py  test_retraining_manager.py
(+8788 files in other folders)
