[project]
name = "homeiq-sim"
version = "0.1.0"
description = "Synthetic Home Assistant-style telemetry generator with regional & seasonal realism."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.7",
  "pyarrow>=17.0",
  "pandas>=2.2",
  "click>=8.1",
  "numpy>=1.26"
]

[project.scripts]
homeiqsim-generate = "homeiqsim.cli.generate:main"
homeiqsim-validate = "homeiqsim.cli.validate:main"
homeiqsim-summarize = "homeiqsim.cli.summarize:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "T201",  # print statements (common in scripts)
]

[tool.ruff.lint.mccabe]
max-complexity = 15  # Warn on complexity > 15

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["T201", "ARG"]  # Allow print and unused args in tests
"scripts/**/*.py" = ["T201"]  # Allow print in scripts

# ============================================
# mypy Configuration
# ============================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, tighten over time
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = false

# Per-module options
[[tool.mypy.overrides]]
module = [
    "tests.*",
    "alembic.*",
    "*.tests.*",
]
ignore_errors = true
ignore_missing_imports = true