[project]
name = "homeiq"
version = "0.1.0"
description = "HomeIQ - Home automation intelligence platform"
readme = "README.md"
requires-python = ">=3.11"

[tool.uv.workspace]
members = [
    "libs/homeiq-patterns",
    "libs/homeiq-resilience",
    "libs/homeiq-data",
    "libs/homeiq-ha",
    "libs/homeiq-observability",
    "libs/homeiq-memory",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "TCH", "PTH"]
ignore = ["E501", "B008", "T201"]

[tool.ruff.lint.per-file-ignores]
# E402: Imports must follow sys.path setup for shared module resolution
"domains/core-platform/admin-api/src/main.py" = ["E402"]
"domains/core-platform/data-api/src/main.py" = ["E402"]
"domains/core-platform/websocket-ingestion/src/main.py" = ["E402"]
"domains/energy-analytics/proactive-agent-service/src/main.py" = ["E402"]
