[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homeiq-simulation"
version = "0.1.0"
description = "Comprehensive simulation framework for validating HomeIQ workflows using synthetic data and mocked services"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    # Core dependencies
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",
    # Data processing
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<1.27.0",
    "pyarrow>=22.0.0,<23.0.0",
    # YAML processing
    "pyyaml>=6.0.1,<7.0.0",
    # Type hints
    "typing-extensions>=4.12.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    # Code quality
    "ruff>=0.14.10,<1.0",
    "mypy>=1.19.1,<2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "scripts*"]

# ============================================
# Ruff Configuration
# ============================================
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "T201",  # print statements (common in scripts)
]

[tool.ruff.lint.mccabe]
max-complexity = 15  # Warn on complexity > 15

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["T201", "ARG"]  # Allow print and unused args in tests
"scripts/**/*.py" = ["T201"]  # Allow print in scripts

# ============================================
# mypy Configuration (Epic 44.1: Static Type Checking)
# ============================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, tighten over time (gradual adoption)
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = false
namespace_packages = true  # Fix duplicate module "src" error - treat as namespace packages

# Async/await support for Python 3.11+
show_error_codes = true
warn_unreachable = true
warn_unused_coroutines = true

# Per-module options
[[tool.mypy.overrides]]
module = [
    "tests.*",
    "*.tests.*",
    "scripts.*",  # Scripts can be less strict initially
]
ignore_errors = true
ignore_missing_imports = true

# ============================================
# Pytest Configuration
# ============================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# ============================================
# Coverage Configuration
# ============================================
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
