[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homeiq-data"
version = "1.0.0"
description = "HomeIQ data access: InfluxDB client, database pool, caching, service client, auth"
requires-python = ">=3.11"
dependencies = [
    "influxdb-client>=1.36",
    "aiohttp>=3.9",
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
