[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homeiq-data"
version = "2.0.0"
description = "HomeIQ data access: InfluxDB client, database pool, caching, service client, auth, BaseSettings, DataAPIClient, OpenAI client"
requires-python = ">=3.11"
dependencies = [
    "influxdb-client>=1.36",
    "aiohttp>=3.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "homeiq-resilience>=1.0.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.2.0",
]
openai = [
    "openai>=1.0",
    "tenacity>=8.2",
]

[tool.setuptools.packages.find]
where = ["src"]
