[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homeiq-ha"
version = "1.0.0"
description = "HomeIQ Home Assistant integration: connection manager, automation lint engine"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "websockets>=12.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"homeiq_ha.homeiq_automation" = ["*.json"]
"homeiq_ha.yaml_validation_service" = ["*.json"]
