[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homeiq-memory"
version = "1.0.0"
description = "HomeIQ memory brain: semantic memory store with hybrid search, confidence decay, and LLM prompt injection"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "homeiq-data>=2.0.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=5.0.0,<6.0.0",  # Epic 38: upgraded from 3.3.x
    "torch>=2.5.0",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
