[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homeiq-observability"
version = "1.0.0"
description = "HomeIQ observability: metrics, logging, monitoring, alerting, tracing"
requires-python = ">=3.11"
dependencies = [
    "structlog>=23.0",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
prometheus = [
    "prometheus-client>=0.17",
]

[tool.setuptools.packages.find]
where = ["src"]
