[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homeiq-patterns"
version = "1.0.0"
description = "HomeIQ reusable patterns: RAGContextService, UnifiedValidationRouter, PostActionVerifier"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "aiohttp>=3.13.3",
    "fastapi>=0.100",
]

[tool.setuptools.packages.find]
where = ["src"]
