[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homeiq-resilience"
version = "2.0.0"
description = "HomeIQ resilience: CircuitBreaker, AppFactory, HealthCheck, Lifespan, TaskManager, Scheduler, HTTPClient"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.25",
    "tenacity>=8.2",
    "apscheduler>=3.10",
    "prometheus-client>=0.19.0",
]

[tool.setuptools.packages.find]
where = ["src"]
