[project]
name = "ai-automation-service-new"
version = "0.1.0"
description = "AI Automation Service"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Use default select; add ignores to focus on critical issues
ignore = ["E501", "C901", "B008", "N806", "UP017", "UP042"]

[tool.ruff.lint.per-file-ignores]
# Scripts add sys.path before imports - E402 is intentional
"scripts/*.py" = ["E402"]
"analyze_review.py" = ["E402"]
"find_bugs.py" = ["E402"]
"tests/e2e/*.py" = ["E402"]