[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homeiq-patterns"
dynamic = ["version"]
description = "HomeIQ reusable patterns: RAGContextService, UnifiedValidationRouter, PostActionVerifier"
requires-python = ">=3.11"
dependencies = []
readme = "README.md"

[tool.setuptools-scm]
root = "../.."

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
